--- a/Rails/MusicApp/app/views/bands/show.html.erb
+++ b/Rails/MusicApp/app/views/bands/show.html.erb
@@ -1,2 +1,9 @@
-<h1>Bands#show</h1>
-<p>Find me in app/views/bands/show.html.erb</p>
+<h1> <%= @band.name %> </h1>
+
+<ul>
+<% Album.all.each do |album| %>
+  <% if album.band_id == @band.id %>
+    <li> <%= link_to album.name, album_url(album.id), method: :show %></li>
+  <% end %>
+<% end %>
+</ul>
