--- a/HTML_CSS/css_reset.css
+++ b/HTML_CSS/css_reset.css
@@ -1,16 +1,4 @@
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+html, body, h1, h2, h3, table, tr, td, aside, footer, header, nav, section{
   margin: 0;
   padding: 0;
   border: 0;
@@ -18,33 +6,37 @@ time, mark, audio, video {
   font: inherit;
   vertical-align: baseline;
 }
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, section {
-  display: block;
-}
+
 body {
   line-height: 1.5;
   margin: 0 200px 0 200px;
 }
+
 ol, ul {
-  list-style: none;
-}
-blockquote, q {
-  quotes: none;
 }
 
-blockquote:before, blockquote:after,
-q:before, q:after {
-  content: '';
-  content: none;
+p{
+  text-align: justify;
+  margin: 12px 0;
+}
+
+p.caption{
+  margin-top: 2px;
+  margin-bottom: 12px;
+  font-style: italic;
+  text-align: center;
 }
 
 table {
   border-collapse: collapse;
   border-spacing: 0;
   border: 1px solid black;
-  margin: 10px 0
+  margin: 10px 0;
+}
+
+table{
+  border-top-style: double;
+  border-bottom-style: double;
 }
 
 td{
@@ -56,16 +48,81 @@ td{
   height: 60px;
   background-color: black;
   margin: 0 -200px 20px -200px;
+  color: white;
+  vertical-align: bottom;
+  border: 1px solid transparent;
 }
 
-.row{
+p.colorstrip{
+  margin-left: 200px;
+  margin-top: 20px;
+  background-color: transparent;
+}
+
+.colorstrip:hover{
+  font-style: underline;
+  color: white;
+}
+
+body {
+  font-family: Arial, sans-serif;
 }
 
 h1 {
-  font-size: 38px
+  font-size: 32px;
+  font-weight: bold;
+  margin: 25px 0 5px 0;
+}
+
+h2 {
+  font-size: 22px;
+  font-weight: bold;
+}
+
+p.by-line {
+  font-size: 16px;
+  font-weight: bold;
+  margin:0;
 }
 
 .button:hover{
-  background: red;
+  background: #990101;
+  color: white;
   cursor: pointer;
+}
+
+.red-header-line{
+  height: 2px;
+  background: #990101;
+}
+
+.white-header-line{
+  height: 2px;
+  background: white;
+}
+
+.black-footer-line{
+  height: 2px;
+  background: black;
+  margin-top: 10px;
+}
+
+.logo{
+  margin: 30px 0 5px 0;
+}
+
+.twitter-button{
+  background: #00aced;
+  color: white;
+  cursor: pointer;
+  margin-top: 10px;
+
+}
+
+.facebook-button{
+  background: #3b5998;
+  color: white;
+  cursor: pointer;
+  margin-top: 10px;
+
 }
