--- a/HTML_CSS/css_reset.css
+++ b/HTML_CSS/css_reset.css
@@ -1,4 +1,4 @@
-html, body, h1, h2, h3, table, tr, td, aside, footer, header, nav, section{
+html, body, h1, h2, h3, table, tr, td, aside, footer, header, nav, section, aside{
   margin: 0;
   padding: 0;
   border: 0;
@@ -9,7 +9,7 @@ html, body, h1, h2, h3, table, tr, td, aside, footer, header, nav, section{
 
 body {
   line-height: 1.5;
-  margin: 0 200px 0 200px;
+  margin: 0 100px 0 100px;
 }
 
 ol, ul {
@@ -27,21 +27,19 @@ p.caption{
   text-align: center;
 }
 
-table {
+nav table {
+  border-top: double;
+  border-bottom: double;
   border-collapse: collapse;
-  border-spacing: 0;
-  border: 1px solid black;
-  margin: 10px 0;
+  margin: 20px 0;
+  width: 100%;
 }
 
-table{
-  border-top-style: double;
-  border-bottom-style: double;
-}
-
-td{
+nav td{
   border: 1px solid black;
   text-align: center;
+  font-weight:bold;
+  padding: 10px;
 }
 
 .colorstrip {
@@ -66,6 +64,7 @@ p.colorstrip{
 
 body {
   font-family: Arial, sans-serif;
+  display: inline-block;
 }
 
 h1 {
@@ -76,6 +75,11 @@ h1 {
 
 h2 {
   font-size: 22px;
+  font-weight: bold;
+}
+
+h3 {
+  font-size: 18px;
   font-weight: bold;
 }
 
@@ -109,6 +113,11 @@ p.by-line {
 
 .logo{
   margin: 30px 0 5px 0;
+  width:270px;
+}
+
+.search-bar {
+  margin-left: 270px;
 }
 
 .twitter-button{
@@ -125,4 +134,55 @@ p.by-line {
   cursor: pointer;
   margin-top: 10px;
 
+}
+
+section {
+  width: 700px;
+  float:left;
+}
+
+aside {
+  background-color: #F5F5F5;
+  width: 400px;
+  float: left;
+  margin: 10px 0 50px 50px;
+  padding-bottom: 30px;
+}
+
+img.header-logo {
+  width: 200px;
+  display:block;
+  margin: 30px auto;
+
+}
+
+img.cartoon {
+  width: 350px;
+  display:block;
+  margin: 20px auto;
+}
+
+img.sidebar-article{
+  float:left;
+  margin: 20px 10px;
+  width: 70px;
+}
+
+h3.sidebar-header, p.sidebar-author{
+  width:200px;
+  float:left;
+}
+
+aside table{
+  margin: auto;
+  margin: auto 20px auto 20px;
+}
+
+aside table td{
+  width: 300px;
+}
+
+.more-link{
+  margin-left: 290px;
+  color: #990101;
 }
