--- a/HTML_CSS/AppAcademyTimes/app/assets/stylesheets/components/_gear_dropdown.scss
+++ b/HTML_CSS/AppAcademyTimes/app/assets/stylesheets/components/_gear_dropdown.scss
@@ -3,12 +3,24 @@
 .gear-dropdown {
   position: absolute;
   top: 50px;
-  right: 110px;
+  right: 150px;
   border-radius: 3px;
   background-color: white;
   flex-direction: column;
   width: 120px;
   padding: 10px;
+}
+
+@media all and (max-width: 1043px) {
+  .gear-dropdown {
+    right: 115px;
+  }
+}
+
+@media all and (max-width: 700px) {
+  .gear-dropdown {
+    right: 100px;
+  }
 }
 
 .gear-dropdown > li {
