--- a/react/minesweeper/style/application.css
+++ b/react/minesweeper/style/application.css
@@ -3,6 +3,8 @@
   height: 30px;
   border: 1px solid gray;
   margin: 0;
+  text-align: center;
+  display: flex;
 }
 
 .row {
@@ -14,7 +16,15 @@
   background-color: #D8D8D8;
 }
 
+.flagged {
+  color: red;
+}
+
 .unexplored {
   border-style: outset;
   background-color: #B0B0B0;
+}
+
+.board {
+  display: flex;
 }
