--- a/react/minesweeper/style/application.css
+++ b/react/minesweeper/style/application.css
@@ -4,7 +4,6 @@
   border: 1px solid gray;
   margin: 0;
   text-align: center;
-  display: flex;
 }
 
 .row {
@@ -26,5 +25,17 @@
 }
 
 .board {
-  display: flex;
+  text-align: center;
+}
+
+.main {
+  position: fixed;
+  left: 50%;
+  /* bring your own prefixes */
+  transform: translate(-50%);
+}
+
+h1, p {
+  margin: 20px auto;
+  text-align: center;
 }
