--- a/react/minesweeper/style/application.css
+++ b/react/minesweeper/style/application.css
@@ -29,13 +29,43 @@
 }
 
 .main {
-  position: fixed;
+  position: absolute;
   left: 50%;
-  /* bring your own prefixes */
   transform: translate(-50%);
 }
 
-h1, p {
+button {
+  margin: 20px auto;
+  left: 50%;
+  transform: translate(-50%);
+}
+
+h1, p{
   margin: 20px auto;
   text-align: center;
+}
+
+.modal-screen {
+  z-index: 998;
+  position: absolute;
+  top: 0%;
+  bottom: 0%;
+  left: 0%;
+  right: 0%;
+  background: rgba(0, 0, 0, .3);
+}
+
+.modal-content {
+  z-index: 999;
+  position: absolute;
+  background: white;
+  border-radius: 5px;
+  border: 1px solid black;
+  font-size: 20px;
+  width: 200px;
+  height: 120px;
+  top: 50%;
+  left: 50%;
+  text-align: center;
+  transform: translateX(-50%) translateY(-50%);
 }
