--- a/react/minesweeper/style/application.css
+++ b/react/minesweeper/style/application.css
@@ -35,6 +35,7 @@
 }
 
 button {
+  position: absolute;
   margin: 20px auto;
   left: 50%;
   transform: translate(-50%);
@@ -52,6 +53,8 @@ h1, p{
   bottom: 0%;
   left: 0%;
   right: 0%;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
   background: rgba(0, 0, 0, .3);
 }
 
@@ -64,7 +67,7 @@ h1, p{
   font-size: 20px;
   width: 200px;
   height: 120px;
-  top: 50%;
+  top: 250px;
   left: 50%;
   text-align: center;
   transform: translateX(-50%) translateY(-50%);
