--- a/react/todo_list/frontend/style/reset.css
+++ b/react/todo_list/frontend/style/reset.css
@@ -1,3 +1,9 @@
-div, h1, h2, h3 {
+div, h1, h2, h3, ul, li, p {
   font-family: sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+ol, ul {
+  list-style-type: none;
 }
