--- a/react/minesweeper/style/application.css
+++ b/react/minesweeper/style/application.css
@@ -53,8 +53,8 @@ h1, p{
   bottom: 0%;
   left: 0%;
   right: 0%;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
+  width: 100%;
+  height: 100%;
   background: rgba(0, 0, 0, .3);
 }
 
