--- a/react/todo_list/frontend/style/application.css
+++ b/react/todo_list/frontend/style/application.css
@@ -6,12 +6,20 @@
   display: none;
 }
 
-.todo-list-item-title:hover {
+.todo-list-item-title:hover, .delete-btn:hover {
   cursor: pointer;
 }
 
 .todo-list-item, .todo-form {
   margin: 20px auto;
+}
+
+.delete-btn {
+  color: #D3D3D3;
+  padding: 4px 10px;
+  margin: 10px 0;
+  border-radius: 5px;
+  background-color: #CD5C5C;
 }
 
 .todo-list-item {
