--- a/react/todo_list/frontend/style/application.css
+++ b/react/todo_list/frontend/style/application.css
@@ -1,3 +1,7 @@
+body {
+  background-color: #66CDAA;
+}
+
 .todo-list-item-title.done {
   text-decoration: line-through;
 }
@@ -11,19 +15,21 @@
 }
 
 .todo-list-item, .todo-form {
+  background-color: #FAF0E6;
   margin: 20px auto;
-}
-
-.delete-btn {
-  color: #D3D3D3;
-  padding: 4px 10px;
-  margin: 10px 0;
-  border-radius: 5px;
-  background-color: #CD5C5C;
-}
-
-.todo-list-item {
   padding: 20px;
   border-radius: 5px;
   border: 1px solid #D3D3D3;
+}
+
+input {
+  margin: 20px;
+}
+
+button, .submit-btn {
+  color: white;
+  padding: 4px 10px;
+  margin: 10px 0;
+  border-radius: 5px;
+  background-color: #778899;
 }
