add toggleStep functionality onClick

--- a/react/todo_list/frontend/style/steps.css
+++ b/react/todo_list/frontend/style/steps.css
@@ -3,12 +3,17 @@ ul.steps-list {
   margin: auto 30px;
 }
 
+/*unshow when corresponding todo is done*/
 .steps-list.done {
   display:none;
 }
 
 .step-list-item-body.done {
   display: none;
+}
+
+.step-list-item-title.done {
+  text-decoration: line-through;
 }
 
 .step-list-item-title:hover {
