--- a/react/todo_list/frontend/style/app.css
+++ b/react/todo_list/frontend/style/app.css
@@ -29,3 +29,17 @@ button, .submit-btn {
   border-radius: 5px;
   background-color: #778899;
 }
+
+input[type=text], textarea {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+textarea {
+    height: 100px;
+}
