--- a/react/todo_list/frontend/style/steps.css
+++ b/react/todo_list/frontend/style/steps.css
@@ -41,4 +41,7 @@ ul.steps-list {
 .toggle-link {
   font-style: italic;
   cursor: pointer;
+  font-size: 12px;
+  padding: 30px 15px 5px 5px;
+  
 }
