--- a/react/todo_list/backend/app/views/static_pages/root.html.erb
+++ b/react/todo_list/backend/app/views/static_pages/root.html.erb
@@ -1,5 +1,21 @@
 
-<div id='content'>
-<h1>StaticPagesController#root</h1>
-<p>Find me in app/views/static_pages_controller/root.html.erb</p>
-</div>
+
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Todo List</title>
+    <script src="bundle.js" charset="utf-8"></script>
+  </head>
+  <body>
+    <div id='content'>
+      <h1>StaticPagesController#root</h1>
+      <p>Find me in app/views/static_pages_controller/root.html.erb</p>
+      
+      <div id=root>
+      </div>
+
+    </div>
+  </body>
+</html>
