--- a/react/bench_bnb/app/views/static_pages/root.html.erb
+++ b/react/bench_bnb/app/views/static_pages/root.html.erb
@@ -1,1 +1,10 @@
-<main id='root'></main>
+<script type="text/javascript">
+  <% if logged_in? %>
+  window.currentUser = <%= render(
+    "api/users/_user.json.jbuilder",
+    user: current_user
+  ).html_safe %>
+  <% end %>//{"id":3,"username":"sennecy_the_cat"}
+</script>
+
+<main id="root"></main>
